# lemmatizer

./: .gitignore  CMakeLists.txt  README  README.md
data/: train_data.txt
include/: traindataparser.h  utf8file.h  wordnet.h  wordnode.h
prototypes/jlemma/src/: Main.java
prototypes/jlemma/src/WordsTierTree/: TrainDataParser.java  WordTree.java
src/: main.cpp  traindataparser.cpp  utf8file.cpp  wordnet.cpp  wordnode.cpp
